# edge-connect

./: .gitignore  README.md  package-lock.json  package.json  playwright.config.ts  stryker.config.mjs  vitest.config.ts  vitest.setup.ts
.github/workflows/: ci.yml  hardware.yml  mutation.yml
e2e/: accessibility.spec.ts  dead-stones.spec.ts  dialogs.spec.ts  gameplay.spec.ts  helpers.ts  layout.spec.ts  server-ai.spec.ts
public/models/star/: .gitignore
scripts/: benchmark-star-scoring.mjs  benchmark-star-scoring.ts  build-star-wasm.mjs  export-star-conformance.mjs  export-star-conformance.ts  typescript-loader.mjs
src/app/: globals.css  layout.tsx  page.test.tsx  page.tsx
src/app/v1/: routes.test.ts
src/app/v1/health/: route.ts
src/app/v2/: routes.test.ts
src/app/v2/analyze/: route.ts
src/app/v2/move/: route.ts
src/components/: BoardStage.tsx  EndGameDialogs.tsx  EngineDeveloperSettings.tsx  EngineEstimatePanel.tsx  GameOverOverlay.tsx  GameScreen.module.css  GameScreen.tsx  GameStatus.tsx  ModalDialog.tsx  MovesPanel.tsx  RulesDialog.tsx  ScorePanel.tsx  SetupScreen.tsx  StarBoard.tsx  Starfield.tsx  starAiDevtools.ts  theme.ts
src/components/__tests__/: GameScreen.test.tsx  MovesPanel.test.tsx  Presentation.test.tsx  SetupScreen.test.tsx  StarBoard.test.tsx
src/lib/: store.ts
src/lib/star/: board.ts  completion-bounds.ts  conformance.ts  game.ts  rules.ts  scoring.ts  symmetry.ts  timeline.ts
src/lib/star/__tests__/: board.test.ts  completion-bounds.test.ts  game.test.ts  properties.test.ts  reference.ts  rules.test.ts  scoring.test.ts  store.test.ts  symmetry.test.ts  timeline.test.ts
src/lib/star/ai/: capabilities.ts  controllers.ts  decision.ts  errors.ts  features.ts  local-client.ts  manifest.ts  protocol.ts  server-client.ts  server-proxy.ts  worker-protocol.ts
src/lib/star/ai/__tests__/: capabilities.test.ts  controllers.test.ts  errors.test.ts  features.test.ts  local-client.test.ts  protocol.test.ts  server-client.test.ts  server-proxy.test.ts  worker-protocol.test.ts  worker-runtime.test.ts
src/workers/: star-ai.worker.ts
testdata/star/: conformance-v1.json  conformance-v2.json
training/: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  pyproject.toml
training/configs/: auto.yaml  distill-browser.yaml  h100-4gpu.yaml  h100-8gpu-autonomous.yaml  h100-8gpu-optimized.yaml  h100-8gpu-throughput.yaml  h100-8gpu.yaml  h100.yaml  small.yaml  starserve.yaml
training/crates/star-engine/: Cargo.toml
training/crates/star-engine/src/: bitboard.rs  board.rs  game.rs  lib.rs  scoring.rs  symmetry.rs
training/crates/star-engine/tests/: conformance.rs  generated_fixture.rs  properties.rs
training/crates/star-py/: Cargo.toml  build.rs  pyproject.toml
training/crates/star-py/examples/: actor_throughput.rs
training/crates/star-py/src/: lib.rs
training/crates/star-search/: Cargo.toml
training/crates/star-search/src/: batch.rs  evaluation.rs  gumbel.rs  lib.rs  tree.rs
training/crates/star-search/tests/: properties.rs
training/crates/star-wasm/: Cargo.toml
training/crates/star-wasm/src/: lib.rs
training/crates/star-wasm/tests/: wasm_contract.rs
training/deploy/: edgeconnect-startrain-ablation.service.example  edgeconnect-startrain-backup.service.example  edgeconnect-startrain-backup.timer.example  edgeconnect-startrain-continuous.service.example  edgeconnect-startrain-report.service.example  edgeconnect-startrain-report.timer.example  edgeconnect-startrain.service.example
training/docs/: elo-per-hour-ablation-runbook.md  h100-target-host-benchmark-results.md  production-h100-training-runbook.md  serving-and-distillation.md  testing-and-h100-validation.md  training-ablation-protocol.md
training/scripts/: benchmark_learner_batches.py  benchmark_native_features.py  benchmark_replay_pipeline.py  check_coverage.py  compare_elo_ablation.py  export_champion_snapshot.py  fork_elo_ablation.py  h100_system_benchmark.py  hardware_health_preflight.py  hardware_preflight.py  migrate_autonomous_profile.py  migrate_continuous_profile.py  monitor_run.py  nccl_smoke.py  prepare_elo_ablation.py  replay_manifest_backup.py  run_elo_ablation.py  strength_efficiency_report.py  validate_continuous_profile.py
training/starserve/: __init__.py  app.py  cli.py  config.py  runtime.py  schemas.py  snapshot.py
training/startrain/: __init__.py  actions.py  actor.py  arena.py  autonomous_elo.py  baselines.py  checkpoint.py  cli.py  config.py  contracts.py  device.py  distill.py  export.py  features.py  hardware_health.py  historical_evaluation.py  inference.py  learner.py  losses.py  model.py  native.py  optim.py  orchestration.py  preflight.py  promotion.py  publish.py  replay.py  replay_store.py  runtime.py  sampling.py  scoring.py  selfplay.py  symmetry.py  topology.py  training.py
training/tests/: conftest.py  test_actor_supervisor.py  test_arena.py  test_autonomous_elo.py  test_autonomous_profile_migration.py  test_baselines.py  test_checkpoint_recovery.py  test_cli_contracts.py  test_compare_elo_ablation.py  test_conformance_fixture.py  test_continuous_profile_migration.py  test_cuda_smoke.py  test_device.py  test_distill.py  test_fork_elo_ablation.py  test_full_board_invariants.py  test_h100_system_benchmark.py  test_hardware_health.py  test_historical_evaluation.py  test_learner_batch_benchmark.py  test_learning_smoke.py  test_losses.py  test_model.py  test_monitor_run.py  test_native_adapter.py  test_native_e2e.py  test_native_features.py  test_orchestration.py  test_pipeline_core.py  test_prepare_elo_ablation.py  test_promotion.py  test_properties.py  test_replay.py  test_replay_benchmark.py  test_replay_concurrency.py  test_replay_manifest_backup.py  test_run_elo_ablation.py  test_runtime.py  test_selfplay_ablation.py  test_starserve.py  (+4 more)
