[package]
name = "star-engine"
description = "Authoritative Double *Star rules, topology, symmetry, and scoring core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[lib]
path = "src/lib.rs"

[lints]
workspace = true

[dev-dependencies]
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"

