[package]
name = "star-py"
description = "Coarse batched PyO3 bindings for Double *Star training actors"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[lib]
name = "star_native"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[dependencies]
pyo3 = { version = "0.29.0", features = ["abi3-py310"] }
star-engine = { path = "../star-engine" }
star-search = { path = "../star-search" }

[lints]
workspace = true

[build-dependencies]
pyo3-build-config = "0.29.0"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
rayon = "1.12.0"

